--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,32 @@
 # Core dependencies
-pandas>=1.5.0
-requests>=2.28.0
-tqdm>=4.64.0
+pandas>=1.3.0
+requests>=2.25.0
+tqdm>=4.60.0
+numpy>=1.20.0
 
 # PDF processing
-PyMuPDF>=1.22.0
-pdfminer.six>=20221105
-pdf2image>=3.1.0
-pytesseract>=0.3.10
-Pillow>=9.0.0
+PyMuPDF>=1.20.0
+pdfminer.six>=20211012
+pdf2image>=1.16.0
+pytesseract>=0.3.8
+Pillow>=8.0.0
+
+# Document processing
+python-docx>=0.8.11
 
 # Text analysis and ML
-scikit-learn>=1.2.0
-KeyBERT>=0.7.0
-BERTopic>=0.15.0
-nltk>=3.8.0
+scikit-learn>=1.0.0
+sentence-transformers>=2.0.0
+bertopic>=0.10.0
+umap-learn>=0.5.0
+hdbscan>=0.8.0
+nltk>=3.6.0
 
-# Indexing (SQLite is built-in, Whoosh is optional alternative)
+# Visualization and reporting
+wordcloud>=1.8.0
+matplotlib>=3.3.0
+plotly>=5.0.0
+
+# Optional dependencies
 whoosh>=2.7.4
-
-# Optional dependencies for enhanced features
-openpyxl>=3.1.0
-streamlit>=1.25.0
+openpyxl>=3.0.0
