--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,6 @@ plotly>=5.0.0
 # Optional dependencies
 whoosh>=2.7.4
 openpyxl>=3.0.0
+
+# GUI dependencies (tkinter is built-in to Python)
+tkinter-tooltip>=3.1.0
