🌐 MAJOR: Complete Cloud Hosting Solution
✨ DUAL SOLUTION: Fixed OCR + Full Cloud Deployment

🔧 OCR IMPROVEMENTS:
- Local Tesseract via conda (no hanging!)
- Cloud OCR fallback using OCR.space API
- Graceful degradation when OCR unavailable
- Smart detection: local first, cloud backup

🌐 COMPLETE CLOUD HOSTING SOLUTION:
- Full web interface replacing GUI
- Docker containerization for all platforms
- Support for Railway, Render, Fly.io, DigitalOcean
- One-click deployment scripts
- Professional web UI with Bootstrap

📦 DEPLOYMENT OPTIONS:
- FREE: Railway.app, Render.com, Fly.io
- PAID: DigitalOcean (-12/month)
- ENTERPRISE: Google Cloud Run (pay-per-use)

🎯 KEY FILES ADDED:
- web_app.py - Flask web interface
- Dockerfile - Container setup
- docker-compose.yml - Local development
- templates/ - Professional web UI
- deploy.py - One-click deployment
- CLOUD_DEPLOYMENT.md - Complete hosting guide

💰 COST ANALYSIS:
- 1,000 docs/month: -5 (free tiers)
- 10,000 docs/month: -25 (paid plans)
- Unlimited scaling available

🚀 CLIENT BENEFITS:
- No installation required
- Access from any device/browser
- Professional web interface
- Scalable cloud infrastructure
- Full OCR support (local + cloud)
- Real-time progress tracking
- Professional search interface

Perfect for single client with high-volume document processing!

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,7 @@ openpyxl>=3.0.0
 
 # GUI dependencies (tkinter is built-in to Python)
 tkinter-tooltip>=3.1.0
+
+# Web application dependencies
+flask>=2.0.0
+werkzeug>=2.0.0
