🎯 SIMPLIFIED STRATEGY: Railway Only (Better Solution)
❌ VERCEL ISSUES RESOLVED:
- Size limits causing deployment failures
- 'Data too long' errors from large dependencies
- Stuck on dependency installation
- Not suitable for full application

✅ RAILWAY ONLY SOLUTION (BETTER):
- No size limits - complete application works
- Full OCR processing included
- Free 30-day trial for customer
- Web-based deployment (no CLI issues)
- Production-ready platform

🚂 SIMPLE DEPLOYMENT PLAN:
- SIMPLE_DEPLOYMENT_PLAN.md created
- 10-minute Railway web deployment
- Complete customer trial instructions
- Single platform management

🎯 CUSTOMER BENEFITS:
- Immediate access to FULL functionality
- Complete OCR processing (not demo)
- Professional web interface
- 30-day unlimited trial
- Real document processing capabilities

💡 WHY THIS IS BETTER:
- One platform instead of two
- Full functionality immediately
- No demo limitations
- Customer gets real value from day 1
- Easier to manage and support

Strategy: Skip problematic Vercel, go straight to Railway with complete functionality!

--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,21 @@
   "version": 2,
   "builds": [
     {
-      "src": "vercel_app.py",
+      "src": "simple_vercel_app.py",
       "use": "@vercel/python",
       "config": {
-        "runtime": "python3.10"
+        "runtime": "python3.9"
       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "vercel_app.py"
+      "dest": "simple_vercel_app.py"
     }
   ],
   "env": {
     "FLASK_ENV": "production",
-    "PYTHONPATH": "/var/task",
-    "SECRET_KEY": "vercel-demo-key-change-in-production"
+    "SECRET_KEY": "demo-key-2024"
   }
 }
