feat: Add interactive UI manager and comprehensive fixes
✨ New Features:
- Interactive Manager (interactive_manager.py) - All-in-one GUI for all operations
- One-click launchers (start.bat, start.sh) for easy access
- Smart file selection menus and guided workflows
- Real-time command execution with feedback

🐛 Major Fixes:
- Fixed Unicode encoding issues on Windows console
- Fixed OCR documents to show text content by default
- Fixed search highlighting in document viewer
- Fixed Railway deployment commands in setup.py
- Fixed setup script to maintain clean state (no test customers)

🧹 Cleanup & Improvements:
- Removed all test customer data (test@example.com)
- Updated .gitignore to prevent test data deployment
- Enhanced document viewer with OCR indicators
- Added separate text/original view buttons for OCR docs
- Improved search snippet generation and display

🌐 Remote Management:
- Enhanced remote_data_manager.py with Windows compatibility
- Added admin API endpoints for remote data management
- Improved error handling and user feedback
- Fixed portal URL and admin key configuration

📚 Documentation:
- Updated QUICK_REFERENCE.md with interactive manager info
- Added workflow examples and troubleshooting guides
- Comprehensive setup and usage instructions

🎯 Key Benefits:
- No more command memorization needed
- All operations accessible via interactive menus
- Cross-platform compatibility (Windows/Linux/Mac)
- Clean deployment state without test pollution
- Professional OCR document handling
- Streamlined customer data management

--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,15 @@ output/*.db
 output/*.csv
 output/*.json
 
+# Test and customer data (prevent accidental deployment)
+admin_data/
+portal_data/
+customer_databases/
+workspace/customers/test*/
+workspace/customers/*/
+test_*.py
+*_temp.py
+
 # Keep directory structure but ignore contents
 downloads/.gitkeep
 text/.gitkeep
